--- a/cloud2024/pom.xml
+++ b/cloud2024/pom.xml
@@ -8,6 +8,9 @@
     <artifactId>cloud2024</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+    <modules>
+        <module>mybatis_generator2024</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
